
[[v3.0.1]]
v3.0.1 (unreleased)
-------------------

Fixed
~~~~~

- The "restore video" functionality of the `view_in_mpv` script works again on
  webengine.
- Setting `url.auto_search` to `dns` works correctly now with Qt 6.
- Counts passed via keypresses now have a digit limit (4300) to avoid
  exceptions due to cats sleeping on numpads. (#7834)

[[v3.0.0]]
v3.0.0 (2023-08-18)
-------------------

Major changes
~~~~~~~~~~~~~

- qutebrowser now supports Qt 6 and uses it by default. Qt 5.15 is used as a
  fallback if Qt 6 is unavailable. This behavior can be customized in three ways
  (in order of precedence):
  * Via `--qt-wrapper PyQt5` or `--qt-wrapper PyQt6` command-line arguments.
  * Via the `QUTE_QT_WRAPPER` environment variable, set to `PyQt6` or `PyQt5`.
  * For packagers wanting to provide packages specific to a Qt version,
    patch `qutebrowser/qt/machinery.py` and set `_WRAPPER_OVERRIDE`.
- Various commands were renamed to better group related commands:
  * `set-cmd-text` -> `cmd-set-text`
  * `repeat` -> `cmd-repeat`
  * `repeat-command` -> `cmd-repeat-last`
  * `later` -> `cmd-later`
  * `edit-command` -> `cmd-edit`
  * `run-with-count` -> `cmd-run-with-count`
  The old names continue to work for the time being, but are deprecated and
  show a warning.
- Releases are now automated on CI, and GPG signed by
  `qutebrowser bot <bot@qutebrowser.org>`, fingerprint
  `27F3 BB4F C217 EECB 8585  78AE EF7E E4D0 3969 0B7B`.
  The key is available as follows:
  * On https://qutebrowser.org/pubkey.gpg
  * Via keys.openpgp.org
  * Via WKD for bot@qutebrowser.org
- Support for old Qt versions (< 5.15), old Python versions (< 3.8) and old
  macOS (< 11)/Windows (< 10) versions were dropped. See the "Removed" section
  below for details.

Added
~~~~~

- On invalid commands/settings with a similarly spelled match, qutebrowser now
  suggests the correct name in its error messages.
- New `:prompt-fileselect-external` command which can be used to spawn an