@@ -2554,7 +2554,7 @@ url.yank_ignored_parameters:
     - utm_term
     - utm_content
     - utm_name
-  desc: URL parameters to strip with `:yank url`.
+  desc: URL parameters to strip when yanking a URL.
 
 ## window
 
@@ -3716,8 +3716,8 @@ bindings.default:
       yD: yank domain -s
       yp: yank pretty-url
       yP: yank pretty-url -s
-      ym: yank inline [{title}]({url})
-      yM: yank inline [{title}]({url}) -s
+      ym: yank inline [{title}]({yank_url})
+      yM: yank inline [{title}]({yank_url}) -s
       pp: open -- {clipboard}
       pP: open -- {primary}
       Pp: open -t -- {clipboard}
